--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "frida-agent-example",
+  "name": "frida-tcg-multi-tool",
   "version": "1.0.0",
-  "description": "Example Frida agent written in TypeScript",
+  "description": "frida-il2cpp-bridge script to bypass SSL pinning and see plaintext requests",
   "private": true,
   "main": "agent/index.ts",
   "scripts": {
@@ -13,6 +13,8 @@
     "@types/frida-gum": "^18.1.0",
     "@types/node": "^18.0.6",
     "frida-compile": "^16.4.1",
-    "frida-il2cpp-bridge": "^0.9.1"
+    "frida-il2cpp-bridge": "^0.9.1",
+    "node-fetch": "^2.7.0",
+    "frida": "^16.5.7"
   }
 }
